--- a/app/src/main/res/layout/activity_check.xml
+++ b/app/src/main/res/layout/activity_check.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.CheckActivity">
+    tools:context="com.github.gotify.connector.template.activities.CheckActivity">
 
     <TextView
         android:id="@+id/text_can_bind"
